# spotify-remake

./: .gitignore  Cargo.toml  flake.nix  index.html  package-lock.json  package.json  tailwind.config.js
public/js/: spotifyPlayer.js
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs
shared_lib/src/shared/: global_context.rs  profile_data.rs  recently_played.rs  track_state.rs  user.rs
shared_lib/src/shared/spotify_object_components/: action.rs  context.rs  copyrights.rs  device.rs  external_ids.rs  external_urls.rs  followers.rs  item.rs  linked_from.rs  restrictions.rs  resume_point.rs
shared_lib/src/shared/spotify_objects/: album.rs  artist.rs  episode.rs  image.rs  player.rs  show.rs  top_artists.rs  top_tracks.rs  track.rs  user.rs
shared_lib/src/shared/spotify_objects/simplified/: artist.rs
src/: .env  app.rs  main.rs  pages.rs  test.rs  ui_elements.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  util.rs
src-tauri/src/util/: config.rs  mod.rs  spotify.rs  spotify_bb_error.rs
src-tauri/src/util/spotify/: auth.rs  mod.rs  player.rs  util.rs
src-tauri/src/util/spotify/response_objects/: user.rs
src-tauri/src/util/tauri_commands/: auth.rs  mod.rs  player.rs  profile.rs
src-tauri/tests/: launch_test.rs
src/css/: input.css  output.css
src/pages/: albums.rs  artists.rs  audiobooks.rs  folders.rs  home.rs  mod.rs  my_library.rs  podcasts.rs  profile.rs  saved.rs  search.rs
src/pages/page_util/: authorized.rs  mod.rs
src/spotify_player/: requests.rs
src/ui_elements/: footer.rs  header.rs  mod.rs  side_nav.rs
